data/derived/fa15/progs/unify/prog3447.ml.out
Characters 29-37:
  let fixpoint (f,b) = wwhile (intboolf,b);;
                               ^^^^^^^^
Error: This expression has type ('a -> int) -> 'a -> int * bool
       but an expression was expected of type
         ('a -> int) -> ('a -> int) * bool
       Type 'a -> int * bool is not compatible with type ('a -> int) * bool 
